spacing bug fixes, removing position relative off .form meant newsletter buttons were broken

--- a/assets/sass/objects/_form.scss
+++ b/assets/sass/objects/_form.scss
@@ -19,6 +19,8 @@
 .form-newsletter {  
   // Input has one off padding, height aims to be 60px at large screens
   // and offset the input button to the right
+  position: relative;
+  
   .input {
     position: relative;
     
