--- a/assets/sass/site/_transition.scss
+++ b/assets/sass/site/_transition.scss
@@ -12,7 +12,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100vh;
+    height: calc(100vh - 48px);
     align-items: center;
     align-content: center; } }
 
